--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         </ul>
       </nav>
       <!-- Hamburger icon Open Button -->
-      <a class="hamburger" href="#side-drawer">
+      <a class="hamburger" href="#side-drawer" aria-label="open navigation menu">
         <span></span>
         <span></span>
         <span></span>
@@ -90,7 +90,7 @@
             />
           </a>
           <!-- Hamburger icon Close Button -->
-          <a class="hamburger" href="#">
+          <a class="hamburger" href="#" aria-label="close navigation menu">
             <span></span>
             <span></span>
             <span></span>
