--- a/pages/home.html
+++ b/pages/home.html
@@ -78,7 +78,7 @@
         </ul>
       </nav>
       <!-- Hamburger icon Open Button -->
-      <a class="hamburger" href="#side-drawer">
+      <a class="hamburger" href="#side-drawer" aria-label="open navigation menu">
         <span></span>
         <span></span>
         <span></span>
@@ -96,7 +96,7 @@
             />
           </a>
           <!-- Hamburger icon Close Button -->
-          <a class="hamburger" href="#">
+          <a class="hamburger" href="#" aria-label="close navigation menu">
             <span></span>
             <span></span>
             <span></span>
