--- a/pages/play.html
+++ b/pages/play.html
@@ -182,11 +182,11 @@
           </div>
         </div>
         <!-- Instructions on how to play the game -->
-        <h3 class="game-instructions">
+        <p class="game-instructions">
           Help Kitty follow the yellow path to find her mouse toy. <br />
           Click the directions to create a list of instructions <br />
           When you're ready click Go.
-        </h3>
+        </p>
       </section>
       <!-- Lower section with parent information -->
       <section class="flex-container lower-section">
